# PDF-Importer-LibreCAD

./: .gitattributes  .gitignore  0build_master_output_1LC-PDFimporter.py  COMPATIBILITY.md  HUMAN_CONFIRMATION.md  INSTALL.md  README.md  THIRD_PARTY_LICENSES.md  build_release.py  build_standalone.py  build_windows_portable.py  corpus_paths.py  dxf_builder.py  dxf_import_engine.py  dxf_text_builder.py  gui.py  pdf2dxf.py  pdf_open_guard.py  pdfcadcore_sync_check.py  pdfcadcore_sync_manifest.json  preflight_check.py  pyproject.toml  release_notices.py  repo_context_builder_core.py  requirements.txt  runtime_requirements.py  standalone_app.py
.release-safety/: warnings.json
_LLM_CONTROL_PACK/: BCS-ARCH-001.md  QA-2026-06-22_text-mode-parity-status.md
installer/: librecad-pdf-importer.iss
librecad_pdf_importer/: batch_cli.py  cli.py  dependency_manager.py  importer.py  qa_smoke.py  runtime_self_test.py
pdfcadcore/: __init__.py  aisc_profiles.py  atomic_io.py  auto_mode.py  cli_error_copy.py  document_profiler.py  embedded_fonts.py  fitz_loader.py  generic_classifier.py  import_config.py  import_report.py  model3d_intent.py  parts_bootstrap.py  preflight_copy.py  primitive_extractor.py  primitives.py  qa_report.py  resolved_scale.py  section_outlines.py  semantic_members.py  source_provenance.py  streaming.py  text_scale.py
plugin/: README.md
scripts/: release_safety.py  smoke_portable_zip.py  smoke_release_artifacts.py
tests/: conftest.py  test_atomic_delivery_reports.py  test_build_metadata.py  test_ci_portability.py  test_clean_break.py  test_dxf_framing.py  (+21 more)
(+86 files in other folders)
