[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf2dxf"
version = "1.0.60"
description = "PDF to DXF converter for LibreCAD, AutoCAD, DraftSight, and QCAD"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "BlueCollar Systems" }
]
dependencies = [
  "PyMuPDF>=1.24,<2.0",
  "ezdxf>=1.0"
]

[project.scripts]
pdf2dxf = "pdf2dxf:main"
lcpdf-import = "librecad_pdf_importer.cli:main"
lcpdf-gui = "gui:launch_gui"
lcpdf-batch = "librecad_pdf_importer.batch_cli:main"

[project.gui-scripts]
lcpdf-guiw = "gui:launch_gui"

[tool.setuptools]
py-modules = ["pdf2dxf", "dxf_builder", "dxf_text_builder", "dxf_import_engine", "gui"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pdfcadcore*", "librecad_pdf_importer*"]

[tool.ruff]
target-version = "py310"
line-length = 99
exclude = [
  "dist",
  "build",
  "__pycache__",
  ".ruff_cache",
]

[tool.ruff.lint]
select = ["F", "B"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
  "ignore::DeprecationWarning:ezdxf.queryparser",
]
